<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2021 The LineageOS Project
    SPDX-License-Identifier: Apache-2.0
-->
<resources>
    <!-- Alert slider -->
    <string name="alert_slider_category_title">Alert slider</string>
    <string name="alert_slider_selection_dialog_title">Action</string>
    <string name="alert_slider_top_position">Top position</string>
    <string name="alert_slider_middle_position">Middle position</string>
    <string name="alert_slider_bottom_position">Bottom position</string>
    <string name="alert_slider_mode_none">None</string>
    <string name="alert_slider_mode_silent">Silent</string>
    <string name="alert_slider_mode_normal">Normal</string>
    <string name="alert_slider_mode_vibration">Vibration</string>
    <string name="alert_slider_mode_dnd_priority_only">Priority only</string>
    <string name="alert_slider_mode_dnd_total_silence">Total silence</string>
    <string name="alert_slider_mode_dnd_alarms_only">Alarms only</string>
    <string name="alert_slider_mode_dnd_custom_mode">Select Mode</string>
    <string name="alert_slider_mute_media_title">Mute media</string>
    <string name="alert_slider_mute_media_summary">Mute media when switching to silent</string>
    <string name="alert_slider_top_position_category_title">Top position settings</string>
    <string name="alert_slider_top_dnd_mode_title">Top DND Mode</string>
    <string name="alert_slider_top_ringer_mode_title">Top Ringer Mode</string>
    <string name="alert_slider_middle_position_category_title">Middle position settings</string>
    <string name="alert_slider_middle_dnd_mode_title">Middle DND Mode</string>
    <string name="alert_slider_middle_ringer_mode_title">Middle Ringer Mode</string>
    <string name="alert_slider_bottom_position_category_title">Bottom position settings</string>
    <string name="alert_slider_bottom_dnd_mode_title">Bottom DND Mode</string>
    <string name="alert_slider_bottom_ringer_mode_title">Bottom Ringer Mode</string>

</resources>
