<?xml version="1.0" encoding="utf-8"?>
<!--
    SPDX-FileCopyrightText: 2021-2025 The LineageOS Project
    SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/alert_slider_category_title">

        <SwitchPreferenceCompat
            android:key="config_mute_media"
            android:title="@string/alert_slider_mute_media_title"
            android:summary="@string/alert_slider_mute_media_summary"
            android:defaultValue="0" />

        <PreferenceCategory
            android:title="@string/alert_slider_top_position_category_title">
            <ListPreference
                android:key="config_top_position"
                android:dialogTitle="@string/alert_slider_selection_dialog_title"
                android:title="@string/alert_slider_top_position"
                android:entries="@array/alert_slider_action_entries"
                android:entryValues="@array/alert_slider_action_entry_values"
                android:defaultValue="0"
                app:useSimpleSummaryProvider="true" />

            <ListPreference
                android:key="config_top_zen_mode"
                android:title="@string/alert_slider_top_dnd_mode_title"
                app:useSimpleSummaryProvider="true" />

            <ListPreference
                android:key="config_top_ringer_mode"
                android:title="@string/alert_slider_top_ringer_mode_title"
                android:entries="@array/alert_slider_ringer_mode_entries"
                android:entryValues="@array/alert_slider_ringer_mode_entry_values"
                app:useSimpleSummaryProvider="true" />
        </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/alert_slider_middle_position_category_title">
            <ListPreference
                android:key="config_middle_position"
                android:dialogTitle="@string/alert_slider_selection_dialog_title"
                android:title="@string/alert_slider_middle_position"
                android:entries="@array/alert_slider_action_entries"
                android:entryValues="@array/alert_slider_action_entry_values"
                android:defaultValue="1"
                app:useSimpleSummaryProvider="true" />

            <ListPreference
                android:key="config_middle_zen_mode"
                android:title="@string/alert_slider_middle_dnd_mode_title"
                app:useSimpleSummaryProvider="true" />

            <ListPreference
                android:key="config_middle_ringer_mode"
                android:title="@string/alert_slider_middle_ringer_mode_title"
                android:entries="@array/alert_slider_ringer_mode_entries"
                android:entryValues="@array/alert_slider_ringer_mode_entry_values"
                app:useSimpleSummaryProvider="true" />
        </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/alert_slider_bottom_position_category_title">
            <ListPreference
                android:key="config_bottom_position"
                android:dialogTitle="@string/alert_slider_selection_dialog_title"
                android:title="@string/alert_slider_bottom_position"
                android:entries="@array/alert_slider_action_entries"
                android:entryValues="@array/alert_slider_action_entry_values"
                android:defaultValue="2"
                app:useSimpleSummaryProvider="true" />

            <ListPreference
                android:key="config_bottom_zen_mode"
                android:title="@string/alert_slider_bottom_dnd_mode_title"
                app:useSimpleSummaryProvider="true" />

            <ListPreference
                android:key="config_bottom_ringer_mode"
                android:title="@string/alert_slider_bottom_ringer_mode_title"
                android:entries="@array/alert_slider_ringer_mode_entries"
                android:entryValues="@array/alert_slider_ringer_mode_entry_values"
                app:useSimpleSummaryProvider="true" />
        </PreferenceCategory>

    </PreferenceCategory>
</PreferenceScreen>
